# GameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
Data/: Outdata.json  data.json
assets/Scripts/: test.cpp
src/: Base.hpp  Component.hpp  main.cpp
src/Components/: Collider.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Transform2D.cpp  Transform2D.hpp
src/Engine/: Base.hpp  CollisionManager.cpp  CollisionManager.hpp  Component.hpp  Editor.cpp  Editor.hpp  GameEngine.cpp  GameEngine.hpp  GameObject.cpp  GameObject.hpp  ScriptInterface.hpp  Serializer.cpp  Serializer.hpp  Vector2Ext.hpp
src/Engine/Components/: Algorithm.cpp  Collider.cpp  Collider.hpp  ComponentFactory.hpp  Components.hpp  Rigid.cpp  Rigid.hpp  RigidBody2D.cpp  RigidBody2D.hpp  ScriptLoader.cpp  ScriptLoader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Transform2D.cpp  Transform2D.hpp  a  test  test.cpp  test1
